--- a/_layouts/index.liquid
+++ b/_layouts/index.liquid
@@ -7,13 +7,13 @@ layout: base
     <div class="col-md-6 col-md-offset-1 vcenter idxHdr">
       <div style='font-size: 2em; color: #4582ec; font-weight: bold; padding-bottom: 0.3em;'>Genaro Rodriguez</div>
       <div style='font-size: 1.2em;'>
-        Ph.D. Student
+        Ingeniero Industrial
       </div>
       <div style='font-size: 1.2em'>
         <a href="http://cs.cmu.edu">Computer Science</a>
       </div>
       <div style='font-size: 1.2em'>
-        <a href="http://www.cmu.edu/">Carnegie Mellon University</a>
+        <a href="http://www.cmu.edu/">Universidad Nacional de Trujillo</a>
       </div>
       <br/>
 
