--- a/_layouts/index.liquid
+++ b/_layouts/index.liquid
@@ -7,13 +7,13 @@ layout: base
     <div class="col-md-6 col-md-offset-1 vcenter idxHdr">
       <div style='font-size: 2em; color: #4582ec; font-weight: bold; padding-bottom: 0.3em;'>Genaro Rodriguez</div>
       <div style='font-size: 1.2em;'>
-        Ingeniero Industrial
+        Titulado
       </div>
       <div style='font-size: 1.2em'>
-        <a href="http://cs.cmu.edu">Computer Science</a>
+        <a href="http://www.unitru.edu.pe/">Ingenieria Industrial</a>
       </div>
       <div style='font-size: 1.2em'>
-        <a href="http://www.cmu.edu/">Universidad Nacional de Trujillo</a>
+        <a href="http://www.unitru.edu.pe/">Universidad Nacional de Trujillo</a>
       </div>
       <br/>
 
@@ -33,7 +33,7 @@ layout: base
             <i class="fa fa-fw fa-github"></i></a>
         </li>
         <li>
-          <a href="http://twitter.com/brandondamos" target="_blank">
+          <a href="http://twitter.com/rgenaroh" target="_blank">
             <i class="fa fa-fw fa-twitter"></i></a>
         </li>
         <li>
@@ -41,7 +41,7 @@ layout: base
           <i class="ai ai-google-scholar"></i></a>
         </li>
         <li>
-          <a href="http://www.facebook.com/bdamos" target="_blank">
+          <a href="http://www.facebook.com/genarorodriguezhoyos" target="_blank">
             <i class="fa fa-fw fa-facebook"></i></a>
         </li>
         <li>
