--- a/_layouts/index.liquid
+++ b/_layouts/index.liquid
@@ -33,23 +33,19 @@ layout: base
             <i class="fa fa-fw fa-github"></i></a>
         </li>
         <li>
-          <a href="http://twitter.com/rgenaroh" target="_blank">
+          <a href="https://twitter.com/rgenaro1h" target="_blank">
             <i class="fa fa-fw fa-twitter"></i></a>
         </li>
         <li>
-          <a href="https://scholar.google.com/citations?user=CZwrwHAAAAAJ" target="_blank">
-          <i class="ai ai-google-scholar"></i></a>
-        </li>
-        <li>
-          <a href="http://www.facebook.com/genarorodriguezhoyos" target="_blank">
+          <a href="https://www.facebook.com/grodriguezhoyos" target="_blank">
             <i class="fa fa-fw fa-facebook"></i></a>
         </li>
         <li>
-          <a href="http://www.linkedin.com/in/bdamos" target="_blank">
+          <a href="https://pe.linkedin.com/in/genaro-yoel-rodr%C3%ADguez-hoyos-56018285" target="_blank">
             <i class="fa fa-fw fa-linkedin"></i></a>
         </li>
         <li>
-          <a href="https://plus.google.com/u/0/115841186832775748898" target="_blank">
+          <a href="https://plus.google.com/118041103277180781367" target="_blank">
             <i class="fa fa-fw fa-google-plus"></i></a>
         </li>
         <li>
