--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -53,17 +53,10 @@
 									<i class="fa fa-lg fa-github"></i></a>
 							</li>
 							<li>
-								<a href="http://twitter.com/rgenaroh" target="_blank">
+								<a href="http://twitter.com/rgenaro1h" target="_blank">
 									<i class="fa fa-lg fa-twitter"></i></a>
 							</li>
-              <li>
-                <a href="https://scholar.google.com/citations?user=CZwrwHAAAAAJ" target="_blank">
-                  <i class="ai ai-google-scholar"></i></a>
-              </li>
-              <li>
-                  <a href="/atom.xml" target="_blank">
-                      <i class="fa fa-rss"></i></a>
-              </li>
+
 						</ul>
 					</div>
 				</div>
